<resources>
    <string name="app_name">GoogleTraining</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_fragment">fragment</string>
    <string name="button_database">database</string>
    <string name="button_intent">ImplicitIntent</string>

    <!-- database contract -->
    <string name="db_name">Name:</string>
    <string name="db_age">Age:</string>
    <string name="db_phone">Phone:</string>
    <string name="db_native_language">Native Language:</string>
    <string name="db_save">Save</string>
    <string name="db_clear">Clear</string>

    <!-- Implicit intent-->
    <string name="intent_call">Call</string>
    <string name="intent_map">Map</string>
    <string name="intent_browser">Browser</string>
    <string name="intent_email">Email</string>
    <string name="intent_chooser">Open with</string>
    <string name="intent_contact">Contact</string>
    <string name="button_permissions">Permissions</string>
    <string name="intent_camera">Camera</string>
</resources>
