<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"/>
    <Button
        android:id="@+id/button_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>
    <Button
        android:id="@+id/button_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fragment"
        android:onClick="openFragment"/>
    <Button
        android:id="@+id/button_database"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_database"
        android:onClick="openDatabase"/>

    <Button
        android:id="@+id/button_intent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_intent"
        android:background="@mipmap/ic_launcher"
        android:onClick="openIntent"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_permissions"
        android:onClick="openPermissions"/>
</LinearLayout>