<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intent_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lixiong.googletraining.activities.IntentActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_call"
            android:onClick="intentCall"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_map"
            android:onClick="intentMap"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_email"
            android:onClick="intentEmail"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_browser"
            android:onClick="intentBrowser"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/intent_contact"
            android:onClick="intentContact"/>

        <ListView
            android:id="@+id/contact_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
